# HallucinoType

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  eval.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
data/: benchmark_v0.jsonl
hallucinotype/: __init__.py  __main__.py  cli.py  pipeline.py  taxonomy.py
hallucinotype/detectors/: __init__.py  base.py  entity.py  llm_judge.py  numerical.py  temporal.py
tests/: test_hallucinotype.py
